# agent-failsafe

./: .gitignore  LICENSE  README.md  plan-sre-v2-endpoints.md  pyproject.toml
.agent/staging/: AUDIT_REPORT.md  reasoning.md  state.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ADAPTER_ARCHITECTURE.md  META_LEDGER.md  SHADOW_GENOME.md  SYSTEM_STATE.md
examples/: README.md  toolkit_integration.py
src/agent_failsafe/: __init__.py  agent_metrics.py  audit_sink.py  client.py  escalation.py  integration.py  interceptor.py  mcp_client.py  patterns.py  pipeline.py  policy_provider.py  rest_server.py  ring_adapter.py  shadow_genome.py  sli.py  trust.py  trust_mapper.py  trust_validator.py  types.py  webhook_events.py
tests/: test_agent_metrics.py  test_audit_sink.py  test_client.py  test_escalation.py  test_integration.py  test_interceptor.py  test_mcp_client.py  test_patterns.py  test_pipeline.py  test_policy_provider.py  test_rest_server.py  test_ring_adapter.py  test_shadow_genome.py  test_sli.py  test_trust.py  test_trust_mapper.py  test_trust_validator.py  test_types.py  test_webhook_events.py
